src/JSBachParser.py
# Generated from JSBach.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class JSBachParser ( Parser ):

    grammarFileName = "JSBach.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'^'", "'%'", 
                     "'='", "'/='", "'>'", "'<'", "'>='", "'<='", "'('", 
                     "')'", "'['", "']'", "'{'", "'}'", "'|:'", "':|'", 
                     "'while'", "'if'", "'then'", "'else'", "'<!>'", "'<?>'", 
                     "'<-'", "'#'", "'<<'", "'8<'", "'<:>'", "'\"'" ]

    symbolicNames = [ "<INVALID>", "SUM", "SUB", "MUL", "DIV", "EXP", "MOD", 
                      "EQ", "NEQ", "GT", "LT", "GEQ", "LEQ", "LPAREN", "RPAREN", 
                      "LCLAUDATOR", "RCLAUDATOR", "LCORCHET", "RCORCHET", 
                      "L_BLOCK", "R_BLOCK", "WHILE", "IF", "THEN", "ELSE", 
                      "WRITE", "READ", "ASSIG", "LIST_LENGTH", "LIST_ADD", 
                      "LIST_CUT", "PLAY", "COMMAS", "NUM", "NOTE", "FNC_NAME", 
                      "ID", "PHRASE", "WS", "NL", "COMMENT" ]

    RULE_root = 0
    RULE_func_decl = 1
    RULE_blck_stmt = 2
    RULE_statement = 3
    RULE_while_stat = 4
    RULE_if_stat = 5
    RULE_else_stat = 6
    RULE_pre_cond_stat = 7
    RULE_cond_stat = 8
    RULE_func_stat = 9
    RULE_params = 10
    RULE_assig_stat = 11
    RULE_read_stat = 12
    RULE_write_stat = 13
    RULE_play_stat = 14
    RULE_list_stat = 15
    RULE_list_assig = 16
    RULE_list_cut = 17
    RULE_list_add = 18
    RULE_list_expr = 19
    RULE_list_decl = 20
    RULE_list_length = 21
    RULE_list_value_get = 22
    RULE_expr = 23

    ruleNames =  [ "root", "func_decl", "blck_stmt", "statement", "while_stat", 
                   "if_stat", "else_stat", "pre_cond_stat", "cond_stat", 
                   "func_stat", "params", "assig_stat", "read_stat", "write_stat", 
                   "play_stat", "list_stat", "list_assig", "list_cut", "list_add", 
                   "list_expr", "list_decl", "list_length", "list_value_get", 
                   "expr" ]

    EOF = Token.EOF
    SUM=1
    SUB=2
    MUL=3
    DIV=4
    EXP=5
    MOD=6
    EQ=7
    NEQ=8
    GT=9
    LT=10
    GEQ=11
    LEQ=12
    LPAREN=13
    RPAREN=14
    LCLAUDATOR=15
    RCLAUDATOR=16
    LCORCHET=17
    RCORCHET=18
    L_BLOCK=19
    R_BLOCK=20
    WHILE=21
    IF=22
    THEN=23
    ELSE=24
    WRITE=25
    READ=26
    ASSIG=27
    LIST_LENGTH=28
    LIST_ADD=29
    LIST_CUT=30
    PLAY=31
    COMMAS=32
    NUM=33
    NOTE=34
    FNC_NAME=35
    ID=36
    PHRASE=37
    WS=38
    NL=39
    COMMENT=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class RootContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(JSBachParser.EOF, 0)

        def func_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSBachParser.Func_declContext)
            else:
                return self.getTypedRuleContext(JSBachParser.Func_declContext,i)


        def getRuleIndex(self):
            return JSBachParser.RULE_root

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = JSBachParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 48
                self.func_decl()
                self.state = 51 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==JSBachParser.FNC_NAME):
                    break

            self.state = 53
            self.match(JSBachParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Func_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FNC_NAME(self):
            return self.getToken(JSBachParser.FNC_NAME, 0)

        def L_BLOCK(self):
            return self.getToken(JSBachParser.L_BLOCK, 0)

        def blck_stmt(self):
            return self.getTypedRuleContext(JSBachParser.Blck_stmtContext,0)


        def R_BLOCK(self):
            return self.getToken(JSBachParser.R_BLOCK, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(JSBachParser.ID)
            else:
                return self.getToken(JSBachParser.ID, i)

        def getRuleIndex(self):
            return JSBachParser.RULE_func_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_decl" ):
                return visitor.visitFunc_decl(self)
            else:
                return visitor.visitChildren(self)




    def func_decl(self):

        localctx = JSBachParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_func_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(JSBachParser.FNC_NAME)
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==JSBachParser.ID:
                self.state = 56
                self.match(JSBachParser.ID)
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 62
            self.match(JSBachParser.L_BLOCK)
            self.state = 63
            self.blck_stmt()
            self.state = 64
            self.match(JSBachParser.R_BLOCK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Blck_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSBachParser.StatementContext)
            else:
                return self.getTypedRuleContext(JSBachParser.StatementContext,i)


        def getRuleIndex(self):
            return JSBachParser.RULE_blck_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlck_stmt" ):
                return visitor.visitBlck_stmt(self)
            else:
                return visitor.visitChildren(self)




    def blck_stmt(self):

        localctx = JSBachParser.Blck_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_blck_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JSBachParser.WHILE) | (1 << JSBachParser.IF) | (1 << JSBachParser.WRITE) | (1 << JSBachParser.READ) | (1 << JSBachParser.LIST_CUT) | (1 << JSBachParser.PLAY) | (1 << JSBachParser.FNC_NAME) | (1 << JSBachParser.ID))) != 0):
                self.state = 66
                self.statement()
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_stat(self):
            return self.getTypedRuleContext(JSBachParser.If_statContext,0)


        def while_stat(self):
            return self.getTypedRuleContext(JSBachParser.While_statContext,0)


        def func_stat(self):
            return self.getTypedRuleContext(JSBachParser.Func_statContext,0)


        def assig_stat(self):
            return self.getTypedRuleContext(JSBachParser.Assig_statContext,0)


        def list_stat(self):
            return self.getTypedRuleContext(JSBachParser.List_statContext,0)


        def play_stat(self):
            return self.getTypedRuleContext(JSBachParser.Play_statContext,0)


        def read_stat(self):
            return self.getTypedRuleContext(JSBachParser.Read_statContext,0)


        def write_stat(self):
            return self.getTypedRuleContext(JSBachParser.Write_statContext,0)


        def else_stat(self):
            return self.getTypedRuleContext(JSBachParser.Else_statContext,0)


        def getRuleIndex(self):
            return JSBachParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = JSBachParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 72
                self.if_stat()
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==JSBachParser.ELSE:
                    self.state = 73
                    self.else_stat()


                pass

            elif la_ == 2:
                self.state = 76
                self.while_stat()
                pass

            elif la_ == 3:
                self.state = 77
                self.func_stat()
                pass

            elif la_ == 4:
                self.state = 78
                self.assig_stat()
                pass

            elif la_ == 5:
                self.state = 79
                self.list_stat()
                pass

            elif la_ == 6:
                self.state = 80
                self.play_stat()
                pass

            elif la_ == 7:
                self.state = 81
                self.read_stat()
                pass

            elif la_ == 8:
                self.state = 82
                self.write_stat()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class While_statContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(JSBachParser.WHILE, 0)

        def pre_cond_stat(self):
            return self.getTypedRuleContext(JSBachParser.Pre_cond_statContext,0)


        def L_BLOCK(self):
            return self.getToken(JSBachParser.L_BLOCK, 0)

        def blck_stmt(self):
            return self.getTypedRuleContext(JSBachParser.Blck_stmtContext,0)


        def R_BLOCK(self):
            return self.getToken(JSBachParser.R_BLOCK, 0)

        def getRuleIndex(self):
            return JSBachParser.RULE_while_stat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_stat" ):
                return visitor.visitWhile_stat(self)
            else:
                return visitor.visitChildren(self)




    def while_stat(self):

        localctx = JSBachParser.While_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_while_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(JSBachParser.WHILE)
            self.state = 86
            self.pre_cond_stat()
            self.state = 87
            self.match(JSBachParser.L_BLOCK)
            self.state = 88
            self.blck_stmt()
            self.state = 89
            self.match(JSBachParser.R_BLOCK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class If_statContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(JSBachParser.IF, 0)

        def pre_cond_stat(self):
            return self.getTypedRuleContext(JSBachParser.Pre_cond_statContext,0)


        def L_BLOCK(self):
            return self.getToken(JSBachParser.L_BLOCK, 0)

        def blck_stmt(self):
            return self.getTypedRuleContext(JSBachParser.Blck_stmtContext,0)


        def R_BLOCK(self):
            return self.getToken(JSBachParser.R_BLOCK, 0)

        def getRuleIndex(self):
            return JSBachParser.RULE_if_stat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_stat" ):
                return visitor.visitIf_stat(self)
            else:
                return visitor.visitChildren(self)




    def if_stat(self):

        localctx = JSBachParser.If_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_if_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(JSBachParser.IF)
            self.state = 92
            self.pre_cond_stat()
            self.state = 93
            self.match(JSBachParser.L_BLOCK)
            self.state = 94
            self.blck_stmt()
            self.state = 95
            self.match(JSBachParser.R_BLOCK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Else_statContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(JSBachParser.ELSE, 0)

        def L_BLOCK(self):
            return self.getToken(JSBachParser.L_BLOCK, 0)

        def blck_stmt(self):
            return self.getTypedRuleContext(JSBachParser.Blck_stmtContext,0)


        def R_BLOCK(self):
            return self.getToken(JSBachParser.R_BLOCK, 0)

        def getRuleIndex(self):
            return JSBachParser.RULE_else_stat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElse_stat" ):
                return visitor.visitElse_stat(self)
            else:
                return visitor.visitChildren(self)




    def else_stat(self):

        localctx = JSBachParser.Else_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_else_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(JSBachParser.ELSE)
            self.state = 98
            self.match(JSBachParser.L_BLOCK)
            self.state = 99
            self.blck_stmt()
            self.state = 100
            self.match(JSBachParser.R_BLOCK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Pre_cond_statContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cond_stat(self):
            return self.getTypedRuleContext(JSBachParser.Cond_statContext,0)


        def getRuleIndex(self):
            return JSBachParser.RULE_pre_cond_stat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPre_cond_stat" ):
                return visitor.visitPre_cond_stat(self)
            else:
                return visitor.visitChildren(self)




    def pre_cond_stat(self):

        localctx = JSBachParser.Pre_cond_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_pre_cond_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.cond_stat()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Cond_statContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return JSBachParser.RULE_cond_stat

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class BinaryCondContext(Cond_statContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JSBachParser.Cond_statContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSBachParser.ExprContext)
            else:
                return self.getTypedRuleContext(JSBachParser.ExprContext,i)

        def GEQ(self):
            return self.getToken(JSBachParser.GEQ, 0)
        def LEQ(self):
            return self.getToken(JSBachParser.LEQ, 0)
        def NEQ(self):
            return self.getToken(JSBachParser.NEQ, 0)
        def GT(self):
            return self.getToken(JSBachParser.GT, 0)
        def LT(self):
            return self.getToken(JSBachParser.LT, 0)
        def EQ(self):
            return self.getToken(JSBachParser.EQ, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBinaryCond" ):
                return visitor.visitBinaryCond(self)
            else:
                return visitor.visitChildren(self)


    class ExprCondContext(Cond_statContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JSBachParser.Cond_statContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(JSBachParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprCond" ):
                return visitor.visitExprCond(self)
            else:
                return visitor.visitChildren(self)


    class ParentCondContext(Cond_statContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JSBachParser.Cond_statContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(JSBachParser.LPAREN, 0)
        def cond_stat(self):
            return self.getTypedRuleContext(JSBachParser.Cond_statContext,0)

        def RPAREN(self):
            return self.getToken(JSBachParser.RPAREN, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParentCond" ):
                return visitor.visitParentCond(self)
            else:
                return visitor.visitChildren(self)



    def cond_stat(self):

        localctx = JSBachParser.Cond_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_cond_stat)
        self._la = 0 # Token type
        try:
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                localctx = JSBachParser.ParentCondContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.match(JSBachParser.LPAREN)
                self.state = 105
                self.cond_stat()
                self.state = 106
                self.match(JSBachParser.RPAREN)
                pass

            elif la_ == 2:
                localctx = JSBachParser.BinaryCondContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.expr(0)
                self.state = 109
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JSBachParser.EQ) | (1 << JSBachParser.NEQ) | (1 << JSBachParser.GT) | (1 << JSBachParser.LT) | (1 << JSBachParser.GEQ) | (1 << JSBachParser.LEQ))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 110
                self.expr(0)
                pass

            elif la_ == 3:
                localctx = JSBachParser.ExprCondContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 112
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Func_statContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FNC_NAME(self):
            return self.getToken(JSBachParser.FNC_NAME, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSBachParser.ExprContext)
            else:
                return self.getTypedRuleContext(JSBachParser.ExprContext,i)


        def getRuleIndex(self):
            return JSBachParser.RULE_func_stat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_stat" ):
                return visitor.visitFunc_stat(self)
            else:
                return visitor.visitChildren(self)




    def func_stat(self):

        localctx = JSBachParser.Func_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_func_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(JSBachParser.FNC_NAME)
            self.state = 119
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 116
                    self.expr(0) 
                self.state = 121
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return JSBachParser.RULE_params

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ParenExprParamContext(ParamsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JSBachParser.ParamsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(JSBachParser.LPAREN, 0)
        def expr(self):
            return self.getTypedRuleContext(JSBachParser.ExprContext,0)

        def RPAREN(self):
            return self.getToken(JSBachParser.RPAREN, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParenExprParam" ):
                return visitor.visitParenExprParam(self)
            else:
                return visitor.visitChildren(self)


    class IdParamContext(ParamsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JSBachParser.ParamsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(JSBachParser.ID, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdParam" ):
                return visitor.visitIdParam(self)
            else:
                return visitor.visitChildren(self)


    class ParenIdParamContext(ParamsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JSBachParser.ParamsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(JSBachParser.LPAREN, 0)
        def ID(self):
            return self.getToken(JSBachParser.ID, 0)
        def RPAREN(self):
            return self.getToken(JSBachParser.RPAREN, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParenIdParam" ):
                return visitor.visitParenIdParam(self)
            else:
                return visitor.visitChildren(self)


    class ExprParamContext(ParamsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JSBachParser.ParamsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(JSBachParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprParam" ):
                return visitor.visitExprParam(self)
            else:
                return visitor.visitChildren(self)



    def params(self):

        localctx = JSBachParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_params)
        try:
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                localctx = JSBachParser.ParenExprParamContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.match(JSBachParser.LPAREN)
                self.state = 123
                self.expr(0)
                self.state = 124
                self.match(JSBachParser.RPAREN)
                pass

            elif la_ == 2:
                localctx = JSBachParser.ParenIdParamContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self.match(JSBachParser.LPAREN)
                self.state = 127
                self.match(JSBachParser.ID)
                self.state = 128
                self.match(JSBachParser.RPAREN)
                pass

            elif la_ == 3:
                localctx = JSBachParser.ExprParamContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 129
                self.expr(0)
                pass

            elif la_ == 4:
                localctx = JSBachParser.IdParamContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 130
                self.match(JSBachParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Assig_statContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(JSBachParser.ID, 0)

        def ASSIG(self):
            return self.getToken(JSBachParser.ASSIG, 0)

        def expr(self):
            return self.getTypedRuleContext(JSBachParser.ExprContext,0)


        def getRuleIndex(self):
            return JSBachParser.RULE_assig_stat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssig_stat" ):
                return visitor.visitAssig_stat(self)
            else:
                return visitor.visitChildren(self)




    def assig_stat(self):

        localctx = JSBachParser.Assig_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_assig_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(JSBachParser.ID)
            self.state = 134
            self.match(JSBachParser.ASSIG)
            self.state = 135
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Read_statContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def READ(self):
            return self.getToken(JSBachParser.READ, 0)

        def ID(self):
            return self.getToken(JSBachParser.ID, 0)

        def getRuleIndex(self):
            return JSBachParser.RULE_read_stat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRead_stat" ):
                return visitor.visitRead_stat(self)
            else:
                return visitor.visitChildren(self)




    def read_stat(self):

        localctx = JSBachParser.Read_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_read_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(JSBachParser.READ)
            self.state = 138
            self.match(JSBachParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Write_statContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WRITE(self):
            return self.getToken(JSBachParser.WRITE, 0)

        def PHRASE(self, i:int=None):
            if i is None:
                return self.getTokens(JSBachParser.PHRASE)
            else:
                return self.getToken(JSBachParser.PHRASE, i)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSBachParser.ExprContext)
            else:
                return self.getTypedRuleContext(JSBachParser.ExprContext,i)


        def getRuleIndex(self):
            return JSBachParser.RULE_write_stat
